--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ body {
   font-family: "Helvetica";
 }
 
-/* ------header section------ */
+                /* ------header section------ */
 header {
   width: 100%;
   height: 90px;
@@ -23,6 +23,11 @@ header {
   top: 0;
   left: 0;
   z-index: 6;
+}
+
+header img {
+  width: 200px;
+  padding-left: 20px;
 }
 
 .upgradebutton {
@@ -38,30 +43,63 @@ header {
 }
 
 
-/* ------main section-------- */
+                 /* ------main section-------- */
+
+
+/* ------navbar left------- */
 .flexNAVLEFT {
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: space-between;
+  padding-left: 20px;
+}
+
+.flexicon {
+  display: flex;
+  align-items: center;
 }
 
 .leftnavbar {
   width: 350px;
   height: 100vh;
+  color: white;
   background-color: #040404;
+  padding-top: 90px;
+  padding-bottom: 90px;
   z-index: 5;
   position: fixed;
   top: 0;
   left: 0;
 }
 
-header img {
-  width: 200px;
-  padding-left: 20px;
+.topmenu {
+  padding-bottom: 30px;
+}
+
+.leftnavbar img {
+  width: 40px;
+}
+
+.playlistmenu ul {
+  list-style: none;
+}
+
+.playlistmenu ul li {
+  padding: 10px 0;
+}
+
+.playlistmenu ul li a {
+  text-decoration: none;
+  color: white;
+}
+
+.install img {
+  width: 15px;
 }
 
 
-/* ------footer section---------- */
+
+                /* ------footer section---------- */
 footer {
   width: 100%;
   height: 90px;
